Added setting to reduce display to a factor of 0.75. Used on RunZX event
Added setting to save spectrum screen to pbm file (black&white)
Added a setting to dump ram contents to file when exiting ZEsarUX, ideal to run automatic tests
Added setting to exit emulator after a number of seconds (--exit-after)
Added second Easter Egg ;)


Improved debugging:
* added cpu-step-over function on debug menu (was already available from ZRCP)
* added function to write byte to file on ZEsarUX hardware debug ports

Improved frameskip: now realvideo buffer is not updated when frameskip

Improved ZRCP: 
* run command is stopped by default when pressing a key (or sending data to the socket)
* when a breakpoint is fired on cpu-step-mode, the breakpoint condition is shown on ZRCP

Improved joystick support: 
* added joystick test menu
* buttons to events and buttons to joystick configuration are saved on configuration file

Improved OSD keyboard:
* now you can press up to all 40 keys (on Spectrum/ZX80/ZX81) at the same time
* now it can be opened from any place (needs multitask on)

Improved QL emulation: 
* experimental support of LOAD, LRUN command
* can now open qlay mdv microdrive image files

Improved file viewer from file utilities: 
* specific file viewers for these kind of files: .tap, .zx, .zsf, .sp, .z80, .sna, .spg, .p, .o, .mmc/.ide (fat browser, plus3dos browser), .dsk, .trd, .tzx, .cdt, .flash (zxuno flash, z88 flash, superupgrade flash), .epr, .eprom
* default hexadecimal file viewer for unknown files
* conversion utility

Improved TSConf emulation:
* added TSConf DMA, line interrupt, sprites layers
* TSConf rendering: now tiles and sprites are drawn per scanline. Border drawing. Handling of scroll registers
* TSConf debugging: debug for DMA, Video registers, Video layers, Sprites, Tiles
* added TR-DOS emulation support

Improved text mode drivers (aalib, stdout, simpletext, curses): text settings are in different submenu, setting to set stdout/simpletext fps